# liveraid-public

./: .gitignore  DOCUMENT_OCR_PROMPT  PROMPT  README.md  app.py  auth_utils.py  database.py  i18n.py  medical_system_prompt.py  pyproject.toml  requirements.txt
data/: dataset.csv  guncelnafld_dataset_labeled.csv  hcc_selected_final_converted.csv  hcc_selected_parameters.csv
models/: cirrhosis_imputer.pkl  cirrhosis_imputer_xgb.pkl  cirrhosis_model.pkl  cirrhosis_model.py  cirrhosis_model_xgb.pkl  cirrhosis_scaler_xgb.pkl  hcc_model_final.py  hcc_scaler.pkl  nafld_catboost_model.pkl  nafld_model.pkl  nafld_model.py  nafld_scaler.pkl  svm_best_model.pkl
static/css/: style.css
static/js/: i18n.js  main.js  voice-input.js
static/js/languages/: en.json  tr.json
static/legal/: privacy-en.html  privacy-tr.html  terms-en.html  terms-tr.html
templates/: base.html  index.html  login.html  register.html  results.html
