[project]
name = "liveraid"
version = "0.1.0"
description = "Comprehensive liver disease risk assessment system"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.3",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "joblib>=1.3.2",
    "catboost>=1.2.8",
    "python-dotenv>=1.0.1",
    "openai>=1.97.0",
    "markdown>=3.7",
    "google-genai==1.5.0",
    "psycopg2-binary>=2.9.7",
    "bcrypt>=4.0.1",
    "Flask-Login>=0.6.3",
    "ipykernel>=6.30.0",
    "xgboost>=2.1.4",
    "reportlab>=4.4.3",
    "beautifulsoup4>=4.13.4",
    "markdown2>=2.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
